--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Activity Organizer and Passive Support System</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    {{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> --}}
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -20,9 +20,5 @@
 </body>
 {{!-- <script src="/js/jquery.min.js"></script> --}}
 <script src="../../node_modules/bootstrap/dist/js/js/bootstrap.min.js"></script>
-<script>
-    setTimeout(() => {
-        $('.alert').remove();
-    }, 3000)
 </script>
 </html>
