--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -12,8 +12,8 @@
 
 <body>
     <div class="custom-container">
-        <h1 class="text-center m-4 text-success">Activity Organizer and Passive Support System</h1>
-        <div class="jumbotron">
+        {{!-- <h1 class="text-center m-4 text-success">Activity Organizer and Passive Support System</h1> --}}
+        <div class="container w-50 bg-light p-5 rounded position-absolute top-50 start-50 translate-middle ">
             <h3 class="text-center text-primary">Registration Form</h3>
             <br>
             {{!-- Display errors --}}
@@ -30,30 +30,30 @@
             {{/if}}
             {{!-- End If Condition --}}
             
-            <form method="post" id="registration" action="">
+            <form class="d-grid gap-3" method="post">
                 <div class="form-group">
-                    <label for="username">Username <span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" id="username" name="username" placeholder="Enter Your Username" value="{{username}}">
+                    <label>Username <span class="text-danger">*</span></label>
+                    <input type="text" class="form-control" name="username" placeholder="Enter Your Username">
                 </div>
                 <div class="form-group">
-                    <label for="nama">Nama</label>
-                    <input type="text" class="form-control" id="nama" name="nama" placeholder="Enter Your Full Name" value="{{nama}}">
+                    <label>Nama</label>
+                    <input type="text" class="form-control" name="nama" placeholder="Enter Your Full Name">
                 </div>
                 <div class="form-group">
-                    <label for="email">Email <span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" id="email" name="email" placeholder="Enter Your E-Mail" value="{{email}}">
+                    <label>Email <span class="text-danger">*</span></label>
+                    <input type="text" class="form-control" name="email" placeholder="Enter Your E-Mail">
                 </div>
                 <div class="form-group">
-                    <label for="tgl_lahir">Tanggal Lahir <span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" name="tgl_lahir" id="tgl_lahir" placeholder="Enter Date of Birth" value="{{tgl_lahir}}">
+                    <label>Tanggal Lahir <span class="text-danger">*</span></label>
+                    <input type="text" class="form-control" name="tgl_lahir" placeholder="Enter Date of Birth">
                 </div>
                 <div class="form-group">
-                    <label for="password">Password <span class="text-danger">*</span></label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="Enter Your Password" value="{{password}}">
+                    <label>Password <span class="text-danger">*</span></label>
+                    <input type="password" class="form-control" name="password" placeholder="Enter Your Password">
                 </div>
                 <div class="form-group">
-                    <label for="harapan_user">Harapan Anda <span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" name="harapan_user" id="harapan_user" placeholder="Enter Your Goals" value="{{harapan_user}}">
+                    <label>Harapan Anda <span class="text-danger">*</span></label>
+                    <input type="text" class="form-control" name="harapan_user" placeholder="Enter Your Goals">
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Register" class="btn btn-info btn-block">
