--- a/templates/views/user.hbs
+++ b/templates/views/user.hbs
@@ -6,29 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Activity Organizer and Passive Support System</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <div class="custom-container">
-        <h1 class="text-center m-4 text-success">Activity Organizer and Passive Support System</h1>
+        <h1 class="text-center m-4 text-dark">Activity Organizer and Passive Support System</h1>
         {{!-- Detail User --}}
-        <h3>Your account detail:</br></h3>
-        <span>Name: {{userDetail.nama}}</br></span>
-        <span>Email: {{userDetail.email}}</br></span>
-        <span>Username: {{userDetail.username}}</br></span>
-        <span>Password: {{userDetail.password}}</br></span>
-        <span>Hope: {{userDetail.harapan_user}}</br></span>
-        <a href="/logout">logout</a>
+        <div class="container rounded p-3 mx-auto" style="background-color: #0d6efd; color: white;">
+            <h3>Your account detail:</br></h3>
+            <span>Name: {{userDetail.nama}}</br></span>
+            <span>Email: {{userDetail.email}}</br></span>
+            <span>Username: {{userDetail.username}}</br></span>
+            <span>Password: {{userDetail.password}}</br></span>
+            <span>Hope: {{userDetail.harapan_user}}</br></span>
+            <span>Point: {{userDetail.point}}<br/></span>
+            <span>Badge: {{userDetail.badge}}<br/></span>
+            <button class="btn btn-dark"><a href="/update-point">update point</a></button>
+            <button class="btn btn-danger"><a href="/change-password">change password</a></button>
+            <button class="btn btn-light"><a href="/logout">logout</a></button>
         </div>
     </div>
 </body>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
-<script>
-    setTimeout(() => {
-        $('.alert').remove();
-    }, 3000)
-</script>
 </html>
